--- a/hellowordl.html
+++ b/hellowordl.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <H1>Sitio Web Cool</H1>
-   <p>Saludos People</p> 
+   <p>Saludos para todos.</p>
+   <p>Esta es mi primera pagina</p> 
 </body>
 </html>
