--- a/hellowordl.html
+++ b/hellowordl.html
@@ -6,7 +6,7 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <H1>Sitio Web Cool</H1>
+    <H1>Sitio Web Profesional</H1>
    <p>Saludos para todos.</p>
    <p>Esta es mi primera pagina</p> 
    <p>Esta es la segunda actualizacion</p>
